<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ultrasonic_costmap_layer</name>
  <version>1.0.0</version>
  <description>Nav2 costmap plugin for ultrasonic sensors that creates arc-shaped obstacles</description>
  <maintainer email="mini@todo.todo">mini</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>car_chassis</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/ultrasonic_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
